<resources>
    <string name="app_name">MVDM</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="select_image">Select Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="employee_of_the_month">employee_of_the_month</string>
    <string name="medewerker_van_de_maand">Medewerker van de maand</string>
    <string name="upload_een_foto">Upload een foto</string>
    <string name="maak_een_foto">Maak een foto</string>
    <string name="todo">TODO</string>
    <string name="mvdm">MVDM</string>
    <string name="Save">Save</string>
    <string name="share">Share</string>
</resources>
