<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/medewerker_van_de_maand"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/upload_een_foto" />

        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/maak_een_foto" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/mvdm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mvdm" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/MVDM"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Save"
                android:textSize="10sp" />


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonDeco"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_deco" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonGlasses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_sunglasses" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonCrown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_crown" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonRainbow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_rainbow" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonFire"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_fire" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shareButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="10sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>